<resources>
    <string name="app_name">Poster</string>
    <string name="poster">Poster</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="selectedimage">SelectedImage</string>
    <string name="textname">textName</string>
    <string name="textcreatedby">textCreatedBy</string>
    <string name="textstory">textStory</string>
    <string name="name">Eli</string>
</resources>