<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPoster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@id/imagePosters"/>

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/poster_background"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@id/viewSupporter"
        app:layout_constraintTop_toTopOf="@id/textName"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="0dp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imagePosters"
        android:layout_width="110dp"
        android:layout_height="152dp"
        android:layout_marginStart="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="6dp"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="15dp"
        android:text="@string/textname"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagePosters"
        app:layout_constraintTop_toTopOf="@id/imagePosters"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/textName"
        style="@style/Widget.AppCompat.RatingBar.Small"/>

    <TextView
        android:id="@+id/textCreatedBy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/textcreatedby"
        android:textSize="15sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="@id/textName"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"/>

    <TextView
        android:id="@+id/textStory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/textstory"
        android:textSize="13sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="@id/textName"
        app:layout_constraintStart_toStartOf="@id/textName"
        app:layout_constraintTop_toBottomOf="@id/textCreatedBy"/>

    <ImageView
        android:id="@+id/imageSelected"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toTopOf="@id/viewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewBackground"
        android:contentDescription="@string/selectedimage" />

</androidx.constraintlayout.widget.ConstraintLayout>